--- a/index.html
+++ b/index.html
@@ -3,29 +3,91 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./styles/sumStyle.css">
+  <link rel="stylesheet" href="./styles/subtractionStyle.css">
+  <link rel="stylesheet" href="./styles/multiplicationStyle.css">
+  <link rel="stylesheet" href="./styles/divisionStyle.css">
   <title>Tabuada</title>
 </head>
 <body>
   <header>
-    <img src="./icons8-estimativas-96.png" alt="">
-    <p>TABUADA</p>
+    <img src="./styles/icons8-estimativas-96.png" alt="Ícone da pagina">
   </header>
+
   <div class="content-center">
-    <input type="number"id="valueA" value="0">
-    <table id="table">
-      <thead>
-        <tr>
-          <td>ValueA</td>
-          <td>Operator</td>
-          <td>ValueB</td>
-          <td>&nbsp;</td>
-          <td>Result</td>
-        </tr>
-      </thead>  
-      <tbody></tbody>
-    </table>
+
+    <article id="sum">
+      <h2>Sum</h2>
+      <input type="number" id="valueSum" value="0">
+      <table id="tableSum">
+        <thead>
+          <tr>
+            <td>ValueA</td>
+            <td>Operator</td>
+            <td>ValueB</td>
+            <td>&nbsp;</td>
+            <td>Result</td>
+          </tr>
+        </thead>  
+        <tbody></tbody>
+      </table>
+    </article>
+
+
+    <article id="subtraction">
+      <h2>Subtraction</h2>
+      <input type="number" id="valueSubtraction" value="0">
+      <table id="tableSubtraction">
+        <thead>
+          <tr>
+            <td>ValueA</td>
+            <td>Operator</td>
+            <td>ValueB</td>
+            <td>&nbsp;</td>
+            <td>Result</td>
+          </tr>
+        </thead>  
+        <tbody></tbody>
+      </table>
+    </article>
+
+    <article id="multiplication">
+      <h2>multiplication</h2>
+      <input type="number" id="valueMultiplication" value="0">
+        <table id="tableMultiplication">
+          <thead>
+            <tr>
+              <td>ValueA</td>
+              <td>Operator</td>
+              <td>ValueB</td>
+              <td>&nbsp;</td>
+              <td>Result</td>
+            </tr>
+          </thead>  
+          <tbody></tbody>
+        </table>
+    </article>
+
+    <article id="division">
+      <h2>Division</h2>
+      <input type="number" id="valueDivision" value="0">
+      <table id="tableDivision">
+        <thead>
+          <tr>
+            <td>ValueA</td>
+            <td>Operator</td>
+            <td>ValueB</td>
+            <td>&nbsp;</td>
+            <td>Result</td>
+          </tr>
+        </thead>  
+        <tbody></tbody>
+      </table>
+    </article>
   </div>
-  <script src="./scrypt.js"></script>
+  <script src="./scrypts/sum.js"></script>
+  <script src="./scrypts/subtraction.js"></script>
+  <script src="./scrypts/multiplication.js"></script>
+  <script src="./scrypts/division.js"></script>
 </body>
 </html>
