--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/globalStyle.css">
   <link rel="stylesheet" href="./styles/sumStyle.css">
   <link rel="stylesheet" href="./styles/subtractionStyle.css">
   <link rel="stylesheet" href="./styles/multiplicationStyle.css">
@@ -15,7 +16,6 @@
   </header>
 
   <div class="content-center">
-
     <article id="sum">
       <h2>Sum</h2>
       <input type="number" id="valueSum" value="0">
@@ -32,7 +32,6 @@
         <tbody></tbody>
       </table>
     </article>
-
 
     <article id="subtraction">
       <h2>Subtraction</h2>
